data/derived/comb/progs/unify/prog0864.ml.out
Characters 198-202:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type int * 'a list
       but an expression was expected of type int
